Bug 388703 - Unable to save API/Access key for "The Open Movie Database" data source
Summary: Unable to save API/Access key for "The Open Movie Database" data source
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-08 22:46 UTC by kramski
Modified: 2018-01-30 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kramski 2018-01-08 22:46:29 UTC
An API/Access key for "The Open Movie Database" data source is persistent only for the current session of Tellico and is cleared on exit, so it has to be re-entered again and again.

Configuring an API key for "TheMovieDB.org" works, so this is not a permission problem on ~/.config/tellicorc.
Comment 1 Robby Stephenson 2018-01-10 02:03:53 UTC
Git commit 56777c8d2015a19b6033c0ff0f91d630b66565ae by Robby Stephenson.
Committed on 10/01/2018 at 02:02.
Pushed by rstephenson into branch '3.1'.

Save the config setting for the OMDB data source.
FIXED-IN: 3.1.1

M  +5    -0    ChangeLog
M  +5    -1    src/fetch/omdbfetcher.cpp

https://commits.kde.org/tellico/56777c8d2015a19b6033c0ff0f91d630b66565ae
Comment 2 Robby Stephenson 2018-01-30 12:38:42 UTC
Git commit 6673c371b84100ad8fc15eb7622ef8191d68ecba by Robby Stephenson.
Committed on 10/01/2018 at 02:24.
Pushed by rstephenson into branch 'master'.

Save the config setting for the OMDB data source.
FIXED-IN: 3.1.1

M  +5    -0    ChangeLog
M  +5    -1    src/fetch/omdbfetcher.cpp

https://commits.kde.org/tellico/6673c371b84100ad8fc15eb7622ef8191d68ecba