Save the config setting for the OMDB data source.

BUG: 388703
FIXED-IN: 3.1.1